--- a/src/Template/cup/navigation.twig
+++ b/src/Template/cup/navigation.twig
@@ -185,7 +185,7 @@
         <li class="nav-item">
             <a href="/cup/editor">
                 <i class="fas fa-edit"></i>
-                <p>{{ 'Template editor'|locale }}</p>
+                <p>{{ 'File editor'|locale }}</p>
             </a>
         </li>
 
