--- a/src/Template/cup/editor/index-aside.twig
+++ b/src/Template/cup/editor/index-aside.twig
@@ -1,6 +1,6 @@
 <div class="page-aside">
     <div class="aside-header">
-        <div class="title">{{ 'Choose a template'|locale }}</div>
+        <div class="title">{{ 'Choose a file'|locale }}</div>
         <a class="btn btn-primary toggle-editor-nav" data-toggle="collapse" href="#editor-app-nav" role="button" aria-expanded="false" aria-controls="editor-nav">
             <span class="btn-label">
                 <i class="icon-menu"></i>
