--- a/src/Template/cup/editor.twig
+++ b/src/Template/cup/editor.twig
@@ -20,11 +20,14 @@
         document.addEventListener('DOMContentLoaded', async () => {
             await window.loader([
                 '/assets/js/plugin/codemirror/lib/codemirror.css?v={{ SHA }}',
-                '/assets/js/plugin/froala/froala_editor.pkgd.css?v={{ SHA }}',
-                '/assets/js/plugin/froala/froala_style.css?v={{ SHA }}',
                 '/assets/js/plugin/codemirror/lib/codemirror.js?v={{ SHA }}',
                 '/assets/js/plugin/codemirror/addon/mode/overlay.js?v={{ SHA }}',
                 '/assets/js/plugin/codemirror/addon/edit/matchbrackets.js?v={{ SHA }}',
+                '/assets/js/plugin/codemirror/addon/dialog/dialog.css?v={{ SHA }}',
+                '/assets/js/plugin/codemirror/addon/dialog/dialog.js?v={{ SHA }}',
+                '/assets/js/plugin/codemirror/addon/search/search.js?v={{ SHA }}',
+                '/assets/js/plugin/codemirror/addon/search/jump-to-line.js?v={{ SHA }}',
+                '/assets/js/plugin/codemirror/addon/search/searchcursor.js?v={{ SHA }}',
                 '/assets/js/plugin/codemirror/addon/selection/selection-pointer.js?v={{ SHA }}',
                 '/assets/js/plugin/codemirror/mode/css/css.js?v={{ SHA }}',
                 '/assets/js/plugin/codemirror/mode/htmlmixed/htmlmixed.js?v={{ SHA }}',
@@ -32,6 +35,8 @@
                 '/assets/js/plugin/codemirror/mode/markdown/markdown.js?v={{ SHA }}',
                 '/assets/js/plugin/codemirror/mode/twig/twig.js?v={{ SHA }}',
                 '/assets/js/plugin/codemirror/mode/xml/xml.js?v={{ SHA }}',
+                '/assets/js/plugin/froala/froala_style.css?v={{ SHA }}',
+                '/assets/js/plugin/froala/froala_editor.pkgd.css?v={{ SHA }}',
                 '/assets/js/plugin/froala/froala_editor.pkgd.js?v={{ SHA }}',
             ]);
 
@@ -54,7 +59,18 @@
                             readOnly: '{{ args.readonly }}',
                             matchBrackets: true,
                             continueComments: 'Enter',
-                            extraKeys: {'Ctrl-q': 'toggleComment'}
+                            extraKeys: {'Ctrl-q': 'toggleComment'},
+                            phrases: {
+                                'Search:': '{{ 'Search:'|locale }}',
+                                'With:': '{{ 'With:'|locale }}',
+                                '(Use /re/ syntax for regexp search)': '{{ '(Use /re/ syntax for regexp search)'|locale }}',
+                                'Replace all:': '{{ 'Replace all:'|locale }}',
+                                'Replace?': '{{ 'Replace?'|locale }}',
+                                'Yes': '{{ 'Yes'|locale }}',
+                                'No': '{{ 'No'|locale }}',
+                                'All': '{{ 'All'|locale }}',
+                                'Stop': '{{ 'Stop'|locale }}'
+                            }
                         });
                     } else {
                         $editor.froalaEditor({
