fix form.twig files

--- a/src/Template/cup/form.twig
+++ b/src/Template/cup/form.twig
@@ -1,11 +1,12 @@
 {#
     label - field label
     name - field name
-    type - field tyoe
-    args - other arguments
+    type - field type
+    args - field other args
     message - additional bottom message
     prefix - bootstrap prefix
     postfix - bootstrap postfix
+    postfix_btn - bootstrap postfix btn
 #}
 {% block input %}
     {% if name is empty %}
