add reference prototype [WiP]

--- a/src/Template/cup/navigation.twig
+++ b/src/Template/cup/navigation.twig
@@ -110,23 +110,13 @@
                             </a>
                         </li>
                         <li>
-                            <a href="/cup/catalog/attribute">
-                                <span class="sub-item">{{ 'Attributes'|locale }}</span>
-                            </a>
-                        </li>
-                        <li>
                             <a href="/cup/catalog/order">
                                 <span class="sub-item">{{ 'Orders'|locale }}</span>
                             </a>
                         </li>
                         <li>
-                            <a href="/cup/catalog/order/status">
-                                <span class="sub-item">{{ 'Order statuses'|locale }}</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/cup/catalog/order/invoice">
-                                <span class="sub-item">{{ 'Invoice template'|locale }}</span>
+                            <a href="/cup/catalog/attribute">
+                                <span class="sub-item">{{ 'Attributes'|locale }}</span>
                             </a>
                         </li>
                     </ul>
@@ -148,6 +138,78 @@
                 <i class="fas fa-file"></i>
                 <p>{{ 'Files'|locale }}</p>
             </a>
+        </li>
+
+        <li class="nav-item">
+            <a data-toggle="collapse" href="#nav-reference">
+                <i class="fas fa-book"></i>
+                <p>{{ 'Reference'|locale }}</p>
+                <span class="caret"></span>
+            </a>
+            <div class="collapse" id="nav-reference">
+                <ul class="nav nav-collapse">
+                    <li>
+                        <a href="/cup/reference/store-locations">
+                            <span class="sub-item">{{ 'Store Locations'|locale }}</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/cup/reference/currencies">
+                            <span class="sub-item">{{ 'Currencies'|locale }}</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/cup/reference/order-status">
+                            <span class="sub-item">{{ 'Order statuses'|locale }}</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/cup/reference/stock-status">
+                            <span class="sub-item">{{ 'Stock statuses'|locale }}</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/cup/reference/deliveries">
+                            <span class="sub-item">{{ 'Deliveries'|locale }}</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/cup/reference/countries">
+                            <span class="sub-item">{{ 'Countries'|locale }}</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/cup/reference/tax-rates">
+                            <span class="sub-item">{{ 'Tax Rates'|locale }}</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/cup/reference/order-invoice">
+                            <span class="sub-item">{{ 'Invoice template'|locale }}</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/cup/reference/order-shipping">
+                            <span class="sub-item">{{ 'Shipping template'|locale }}</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/cup/reference/length-classes">
+                            <span class="sub-item">{{ 'Length Classes'|locale }}</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/cup/reference/weight-classes">
+                            <span class="sub-item">{{ 'Weight Classes'|locale }}</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/cup/reference/address-format">
+                            <span class="sub-item">{{ 'Address Format'|locale }}</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </li>
 
         <li class="nav-item">
