--- a/src/Template/cup/reference/currencies/index.twig
+++ b/src/Template/cup/reference/currencies/index.twig
@@ -28,8 +28,8 @@
                         {% block thead %}
                             <div class="col col-sm-1 d-none d-sm-block">#</div>
                             <div class="col">{{ 'Title'|locale }}</div>
-                            <div class="col-2">{{ 'Code'|locale }}</div>
-                            <div class="col-2">{{ 'Value'|locale }}</div>
+                            <div class="col-2 text-center">{{ 'Code'|locale }}</div>
+                            <div class="col-2 text-right">{{ 'Value'|locale }}</div>
                             <div class="col-4 col-sm-3 text-right"></div>
                         {% endblock %}
 
@@ -38,8 +38,8 @@
                                 <div class="row">
                                     <div class="col col-sm-1 d-none d-sm-block">{{ item.order }}</div>
                                     <div class="col">{{ item.title }}</div>
-                                    <div class="col-2">{{ item.value.code }}</div>
-                                    <div class="col-2">{{ item.value.value|number_format(3, '.', ' ') }}</div>
+                                    <div class="col-2 text-center">{{ item.value.code }}</div>
+                                    <div class="col-2 text-right">{{ item.value.value|number_format(3, '.', ' ') }}</div>
                                     <div class="col-4 col-sm-3 text-right">
                                         <form action="/cup/reference/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Are you sure you want to delete this element?'|locale }}');">
                                             <div class="btn-group">
