--- a/src/Template/cup/catalog/product/form.twig
+++ b/src/Template/cup/catalog/product/form.twig
@@ -188,7 +188,40 @@
                                                 'min': '0',
                                             }
                                         } %}
+                                    </div>
+                                </div>
 
+                                <hr>
+
+                                <div class="row">
+                                    <div class="col-12 col-md-6">
+                                        {% include 'cup/form.twig' with {
+                                            'label': 'Quantity'|locale,
+                                            'type': 'number',
+                                            'name': 'quantity',
+                                            'args': {
+                                                'value': item.quantity ? item.quantity|number_format(2, '.', '') : '',
+                                                'placeholder': '1.00',
+                                                'step': 'any',
+                                                'min': '0',
+                                            }
+                                        } %}
+
+                                        {% include 'cup/form.twig' with {
+                                            'label': 'Minimum Quantity'|locale,
+                                            'type': 'number',
+                                            'name': 'quantityMin',
+                                            'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Force a minimum ordered amount'|locale) ~ '"></i>',
+                                            'args': {
+                                                'value': item.quantityMin ? item.quantityMin|number_format(2, '.', '') : '',
+                                                'placeholder': '1.00',
+                                                'step': 'any',
+                                                'min': '0',
+                                            }
+                                        } %}
+                                    </div>
+
+                                    <div class="col-12 col-md-6">
                                         {% include 'cup/form.twig' with {
                                             'label': 'Price wholesale from'|locale,
                                             'type': 'number',
@@ -207,43 +240,64 @@
 
                                 <div class="row">
                                     <div class="col-12 col-md-6">
+                                        <div class="row">
+                                            <div class="col-4">
+                                                {% include 'cup/form.twig' with {
+                                                    'label': 'Length'|locale,
+                                                    'type': 'number',
+                                                    'name': 'dimension[length]',
+                                                    'args': {
+                                                        'value': item.dimension.length ? item.dimension.length|number_format(2, '.', '') : '',
+                                                        'placeholder': '0.00',
+                                                        'min': '0',
+                                                        'step': 'any',
+                                                    }
+                                                } %}
+                                            </div>
+                                            <div class="col-4">
+                                                {% include 'cup/form.twig' with {
+                                                    'label': 'Width'|locale,
+                                                    'type': 'number',
+                                                    'name': 'dimension[width]',
+                                                    'args': {
+                                                        'value': item.dimension.width ? item.dimension.width|number_format(2, '.', '') : '',
+                                                        'placeholder': '0.00',
+                                                        'min': '0',
+                                                        'step': 'any',
+                                                    }
+                                                } %}
+                                            </div>
+                                            <div class="col-4">
+                                                {% include 'cup/form.twig' with {
+                                                    'label': 'Height'|locale,
+                                                    'type': 'number',
+                                                    'name': 'dimension[height]',
+                                                    'args': {
+                                                        'value': item.dimension.height ? item.dimension.height|number_format(2, '.', '') : '',
+                                                        'placeholder': '0.00',
+                                                        'min': '0',
+                                                        'step': 'any',
+                                                    }
+                                                } %}
+                                            </div>
+                                        </div>
+
                                         {% include 'cup/form.twig' with {
-                                            'label': 'Length (cm)'|locale,
-                                            'type': 'number',
-                                            'name': 'dimension[length]',
+                                            'label': 'Length class'|locale,
+                                            'type': 'select',
+                                            'name': 'dimension[length_class]',
                                             'args': {
-                                                'value': item.dimension.length ? item.dimension.length|number_format(2, '.', '') : '',
-                                                'placeholder': '0.00'
+                                                'option': {'': '---'}|merge(length_class.sortBy('order').pluck('title', 'value.unit').all()),
+                                                'selected': item.dimension.length_class,
                                             }
                                         } %}
 
                                         {% include 'cup/form.twig' with {
-                                            'label': 'Width (cm)'|locale,
+                                            'label': 'Weight'|locale,
                                             'type': 'number',
-                                            'name': 'dimension[width]',
+                                            'name': 'dimension[weight]',
                                             'args': {
-                                                'value': item.dimension.width ? item.dimension.width|number_format(2, '.', '') : '',
-                                                'placeholder': '0.00'
-                                            }
-                                        } %}
-
-                                        {% include 'cup/form.twig' with {
-                                            'label': 'Height (cm)'|locale,
-                                            'type': 'number',
-                                            'name': 'dimension[height]',
-                                            'args': {
-                                                'value': item.dimension.height ? item.dimension.height|number_format(2, '.', '') : '',
-                                                'placeholder': '0.00'
-                                            }
-                                        } %}
-
-                                        {% include 'cup/form.twig' with {
-                                            'label': 'Volume'|locale,
-                                            'type': 'number',
-                                            'name': 'volume',
-                                            'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Depends on the chosen dimension'|locale) ~ '"></i>',
-                                            'args': {
-                                                'value': item.volume ? item.volume|number_format(3, '.', '') : '',
+                                                'value': item.dimension.weight ? item.dimension.weight|number_format(2, '.', '') : '',
                                                 'placeholder': '1.000',
                                                 'step': 'any',
                                                 'min': '0',
@@ -251,21 +305,14 @@
                                         } %}
 
                                         {% include 'cup/form.twig' with {
-                                            'label': 'Dimension'|locale,
-                                            'type': 'text',
-                                            'name': 'unit',
+                                            'label': 'Weight Class'|locale,
+                                            'type': 'select',
+                                            'name': 'dimension[weight_class]',
                                             'args': {
-                                                'value': item.unit,
-                                                'list': 'unit',
-                                                'autocomplete': 'off',
+                                                'option': {'': '---'}|merge(weight_class.sortBy('order').pluck('title', 'value.unit').all()),
+                                                'selected': item.dimension.weight_class,
                                             }
                                         } %}
-
-                                        <datalist id="unit">
-                                            {% for unit in measure %}
-                                                <option value="{{ unit.contraction }}">{{ unit.title }}</option>
-                                            {% endfor %}
-                                        </datalist>
                                     </div>
 
                                     <div class="col-12 col-md-6">
